fixed form wrapping issue

--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ footer p {
 
  .group{
   flex-direction: row;
+  flex-wrap: wrap;
  }
  
  .aboutSection {
